# slavic-horror-engine

./: .gitignore  camera_engine.py  cards_guide.txt  channel_assets.py  comment_moderation_guide.txt  community_posts_guide.txt  config.py  end_screens_guide.txt  image_engine.py  main.py  monsters_database.py  playlists_guide.txt  prompts.py  pyproject.toml  requirements.txt  settings.yaml  social_publisher.py  story_engine.py  telegram_notifier.py  video_engine.py  youtube_auth.py  youtube_uploader.py
.github/workflows/: youtube-upload.yml
core/: __init__.py  config.py  pipeline.py
core/engines/: __init__.py  audio_engine.py  camera_engine.py  image_engine.py  publishing_engine.py  sound_engine.py  story_engine.py  subtitle_engine.py  video_engine.py
core/models/: assets.py  story.py
core/prompts/: story.py
core/providers/: base.py  edge_tts_provider.py  gemini_provider.py  gtts_provider.py  pollinations_provider.py
core/utils/: image.py  logging.py  text.py
providers/: __init__.py  gemini.py  pollinations.py
tests/: test_config.py  test_gemini_keys_envlist.py  test_gemini_rotation.py  test_image_utils.py  test_pipeline_final_question.py  test_sound_engine.py  test_sound_engine_variants.py  test_sound_engine_whisper.py  test_story_provider.py  test_text_utils.py  test_tts_cache_invalidation.py  test_voice_profile.py
